# nofrendo

./: .clangd  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  FINDINGS.md  Makefile  NES_SPEED_PLAN.md  NOTES.md  PERF.md  README.html  README.md  link_map.ld  nofrendo.code-workspace
Source/: nes_kirby_adventure_1_1.txt  nes_smb1_world_1_1.txt  pdxinfo
src/: diag.c  diag.h  display.c  keyboard.c  main.c  osd.c  sound.c  statefile_wrapper.c  statefile_wrapper.h  stubs.c  syscalls.c  timing.c
src/nofrendo/: event.c  nofrendo.c  noftypes.h  osd.h
src/nofrendo/cpu/: nes6502.c  nes6502.h
src/nofrendo/mappers/: map004.c
src/nofrendo/nes/: nes.c  nes.h  nes_mmc.c  nes_mmc.h  nes_pal.c  nes_ppu.c  nes_ppu.h  nes_rom.c  nes_rom.h  nesinput.c  nesinput.h  nesstate.c
